# serializer version: 1
# name: test_action_setting_target_slide_setter_assigns_named_slide
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1">
    <a:hlinkClick action="ppaction://hlinksldjump" r:id="rId42"/>
  </p:cNvPr>
  
  '''
# ---
# name: test_action_setting_target_slide_setter_clears_action_on_none
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1"/>
  
  '''
# ---
# name: test_hyperlink_address_setter_adds_click_hyperlink
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1">
    <a:hlinkClick r:id="rId3"/>
  </p:cNvPr>
  
  '''
# ---
# name: test_hyperlink_address_setter_adds_hover_hyperlink_when_hover_true
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1">
    <a:hlinkHover r:id="rId3"/>
  </p:cNvPr>
  
  '''
# ---
# name: test_hyperlink_address_setter_removes_hyperlink_when_none[<a:hlinkClick r:id="rId6"/>-False]
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1"/>
  
  '''
# ---
# name: test_hyperlink_address_setter_removes_hyperlink_when_none[<a:hlinkHover r:id="rId6"/>-True]
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1"/>
  
  '''
# ---
# name: test_hyperlink_address_setter_replaces_existing_hyperlink
  '''
  <p:cNvPr xmlns:p="http://schemas.openxmlformats.org/presentationml/2006/main" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" id="1" name="Shape 1">
    <a:hlinkClick r:id="rId3"/>
  </p:cNvPr>
  
  '''
# ---
